# NativeCallbackTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativecallbacktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  draminski.c  leltek.c  library1.c  library2.c
app/src/main/java/com/example/nativecallbacktest/: MainActivity.java  NativeInterop.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nativecallbacktest/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
